# origami

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  backlog.md  framework-spec.md  grammar.tab.c  grammar.y  milestones.md  origami_esempio.ori  tokens.json
.github/workflows/: ci.yml
_reference/: tokens.rs
_reference/origami-analyzer/: tests.rs  vocabulary.rs
_reference/origami-codegen/: css.rs  tests.rs  vue.rs
_reference/origami-codegen/tests/: integration.rs
_reference/origami-lexer/: template_lexer.rs
_reference/origami-parser/tests/: integration.rs
_reference/origami-runtime/: ast.rs  codes.rs  design_tokens.rs  diagnostics.rs  tests.rs  tokens.rs
blocks/: 00-stack.md  01-router.md  02-data-layer.md  03-dev-server.md  04-i18n.md  05-testing.md  06-accessibility.md  07-cli.md
crates/origami-a11y/: Cargo.toml
crates/origami-analyzer/: Cargo.toml
crates/origami-analyzer/src/: lib.rs  vocabulary.rs
crates/origami-analyzer/tests/: integration.rs
crates/origami-cli/: Cargo.toml
crates/origami-cli/src/: lib.rs  main.rs
crates/origami-cli/src/commands/: build.rs  check.rs  dev.rs  init.rs  mod.rs  test.rs  unsafe_report.rs
crates/origami-codegen/: Cargo.toml
crates/origami-codegen/src/: lib.rs
crates/origami-data/: Cargo.toml
crates/origami-dev/: Cargo.toml
crates/origami-i18n/: Cargo.toml
crates/origami-lexer/: Cargo.toml  README.md
crates/origami-lexer/src/: component_blocks.rs  lib.rs  tests.rs
crates/origami-parser/: Cargo.toml  README.md
crates/origami-parser/src/: attrs.rs  lib.rs  props.rs  tests.rs
crates/origami-router/: Cargo.toml
crates/origami-runtime/: Cargo.toml
crates/origami-runtime/src/: ast.rs  codes.rs  design_tokens.rs  errors.rs  lib.rs  position.rs  tests.rs  tokens.rs
crates/origami-test/: Cargo.toml
design/: quick-ref.md
design/blocks/: 01-router.md  02-data-layer.md  03-dev-server.md  04-i18n.md  05-testing.md  06-accessibility.md  07-cli.md
design/opencode/: AGENTS.md  porting-guide.md
fixtures/: clt107_complex_expr.clutter  complex.clutter  if_else.clutter  invalid_token.clutter  logic_block.clutter  multi_component.clutter  nesting.clutter  orphan_else.clutter  props.clutter  query_builder.clutter  simple_component.clutter  undeclared_identifier.clutter  unsafe_block.clutter  unsafe_value.clutter  valid.clutter
