[workspace]
members = [
    "crates/origami-a11y",
    "crates/origami-analyzer",
    "crates/origami-cli",
    "crates/origami-codegen",
    "crates/origami-data",
    "crates/origami-dev",
    "crates/origami-i18n",
    "crates/origami-lexer",
    "crates/origami-parser",
    "crates/origami-router",
    "crates/origami-runtime",
    "crates/origami-test",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[workspace.dependencies]
# Internal crates
origami-runtime  = { path = "crates/origami-runtime" }
origami-lexer    = { path = "crates/origami-lexer" }
origami-parser   = { path = "crates/origami-parser" }
origami-analyzer = { path = "crates/origami-analyzer" }
origami-codegen  = { path = "crates/origami-codegen" }
origami-router   = { path = "crates/origami-router" }
origami-data     = { path = "crates/origami-data" }
origami-dev      = { path = "crates/origami-dev" }
origami-i18n     = { path = "crates/origami-i18n" }
origami-test     = { path = "crates/origami-test" }
origami-a11y     = { path = "crates/origami-a11y" }

# External dependencies
clap        = { version = "4", features = ["derive"] }
miette      = { version = "7", features = ["fancy"] }
thiserror   = "2"
typed-arena = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
ureq        = "3"
notify      = "6"
tokio       = { version = "1", features = ["rt-multi-thread", "process", "signal", "macros"] }
